# FiT-diffusers

./: .gitignore  README.md  README_DIFFUSERS.md  apply_diffusers_refactor.py  pyproject.toml  requirements.txt  sample_fit_ddp.py  sample_fitv2_ddp.py  train_fit.py  train_fitv2.py
configs/fit/: config_fit_xl.yaml
configs/fitv2/: config_fitv2_3B.yaml  config_fitv2_hr_3B.yaml  config_fitv2_hr_xl.yaml  config_fitv2_xl.yaml
scripts/: _bootstrap.py  bundle_fit_hub_modules.py  convert_fit_to_diffusers.py  sample_fit.py  sample_fit_ddp.py  train_fit.py  train_fitv2.py
src/: diffusers
src/diffusers/: __init__.py
src/diffusers/data/: __init__.py
src/diffusers/models/: __init__.py
src/diffusers/models/transformers/: __init__.py  fit_modules.py  fit_transformer_2d.py  norms.py  transformer_fit.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/fit/: __init__.py  pipeline_fit.py  pipeline_fit_flow.py
src/diffusers/schedulers/: __init__.py  scheduling_fit_improved.py
src/diffusers/schedulers/improved_diffusion/: __init__.py  fit_improved_sampler.py  respace.py
src/diffusers/utils_training/: __init__.py  utils.py
src/diffusers_fit/: __init__.py
src/diffusers_fit/datasets/: __init__.py
src/diffusers_fit/models/: __init__.py
src/diffusers_fit/models/transformers/: __init__.py  modules_fit.py  transformer_fit.py
src/diffusers_fit/pipelines/: __init__.py
src/diffusers_fit/pipelines/fit/: __init__.py  pipeline_fit.py
src/diffusers_fit/schedulers/: __init__.py  scheduling_flow_match_fit.py
templates/: pipeline.py  pipeline_fiTv2.py
tests/: test_diffusers_fit.py  test_fit_diffusers.py
tools/: train_fit_xl.sh  train_fitv2_3B.sh  train_fitv2_hr_3B.sh  train_fitv2_hr_xl.sh  train_fitv2_xl.sh
