[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusers-fit"
version = "0.1.0"
description = "Diffusers-style Flexible Vision Transformer (FiT) components."
readme = "README_DIFFUSERS.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "diffusers>=0.30.1",
    "torch",
    "safetensors",
    "einops",
    "timm",
    "omegaconf",
    "accelerate",
    "numpy",
    "pillow",
    "torchdiffeq",
]

[project.optional-dependencies]
dev = ["pytest", "wandb", "torchvision"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
